--- a/templates/products.html
+++ b/templates/products.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
     <h1>My products page</h1>
     <p>{{my_prods}}</p>
+    <div>
+        <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">product Id</th>
+      <th scope="col">Product_name</th>
+      <th scope="col">Buying price</th>
+      <th scope="col">Selling price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Biscuits</td>
+      <td>ksh. 100.00</td>
+      <td>ksh. 200.00</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Milk</td>
+      <td>ksh. 35.00</td>
+      <td>ksh. 60.00</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Bread</td>
+      <td>ksh. 65.00</td>
+      <td>ksh. 130.00</td>
+    </tr>
+  </tbody>
+</table>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
