--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
     <h1>My sales page.</h1>
     <p>{{sales_1}}</p>
+    <div>
+        <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">sales_id</th>
+      <th scope="col">product_id</th>
+      <th scope="col">quantity</th>
+      <th scope="col">created_at</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>1</td>
+      <td>2</td>
+      <td>21/10/2025</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>2</td>
+      <td>5</td>
+      <td>22/10/2025</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>3</td>
+      <td>7</td>
+      <td>23/10/2025</td>
+    </tr>
+  </tbody>
+</table>
+
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
