--- a/templates/products.html
+++ b/templates/products.html
@@ -14,37 +14,30 @@
     <p>{{my_prods}}</p>
     <div>
         <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">product Id</th>
-      <th scope="col">Product_name</th>
-      <th scope="col">Buying price</th>
-      <th scope="col">Selling price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Biscuits</td>
-      <td>ksh. 100.00</td>
-      <td>ksh. 200.00</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Milk</td>
-      <td>ksh. 35.00</td>
-      <td>ksh. 60.00</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Bread</td>
-      <td>ksh. 65.00</td>
-      <td>ksh. 130.00</td>
-    </tr>
-  </tbody>
-</table>
+            <thead>
+                <tr>
+                    <th scope="col">product Id</th>
+                    <th scope="col">Product_name</th>
+                    <th scope="col">Buying price</th>
+                    <th scope="col">Selling price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biscuits</td>
+                    <td>ksh. 100.00</td>
+                    <td>ksh. 200.00</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
