--- a/templates/sales.html
+++ b/templates/sales.html
@@ -14,38 +14,33 @@
     <p>{{sales_1}}</p>
     <div>
         <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">sales_id</th>
-      <th scope="col">product_id</th>
-      <th scope="col">quantity</th>
-      <th scope="col">created_at</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>1</td>
-      <td>2</td>
-      <td>21/10/2025</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>2</td>
-      <td>5</td>
-      <td>22/10/2025</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>3</td>
-      <td>7</td>
-      <td>23/10/2025</td>
-    </tr>
-  </tbody>
-</table>
+            <thead>
+                <tr>
+                    <th scope="col">sales_id</th>
+                    <th scope="col">product_id</th>
+                    <th scope="col">quantity</th>
+                    <th scope="col">created_at</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>21/10/2025</td>
+                </tr>
+            </tbody>
+        </table>
 
     </div>
 
+
+
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
