--- a/templates/stock.html
+++ b/templates/stock.html
@@ -14,36 +14,29 @@
     <p>{{stock_1}}</p>
     <div>
         <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">stock_id</th>
-      <th scope="col">product_id</th>
-      <th scope="col">quantity</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>1</td>
-      <td>3</td>
+            <thead>
+                <tr>
+                    <th scope="col">stock_id</th>
+                    <th scope="col">product_id</th>
+                    <th scope="col">quantity</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>3</td>
+                </tr>
 
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>2</td>
-      <td>5</td>
-     
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>3</td>
-      <td>10</td>
-    </tr>
-  </tbody>
-</table>
+            </tbody>
+        </table>
     </div>
 
 
+    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
