updates on html temp using jinja

--- a/templates/stock.html
+++ b/templates/stock.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>My stock page</h1>
-    <p>{{stock_1}}</p>
+    <!-- <p>{{stock_1}}</p> -->
     <div>
         <table class="table">
             <thead>
@@ -22,18 +22,21 @@
                 </tr>
             </thead>
             <tbody>
+                {% for stock in stock_1 %}
                 <tr>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>3</td>
+                    <td>{{stock[0]}}</td>
+                    <td>{{stock[1]}}</td>
+                    <td>{{stock[2]}}</td>
                 </tr>
+                {% endfor %}
+
 
             </tbody>
         </table>
     </div>
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
