--- a/templates/products.html
+++ b/templates/products.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>My products page</h1>
-    <p>{{my_prods}}</p>
+    <!-- <p>{{my_prods}}</p> -->
     <div>
         <table class="table">
             <thead>
@@ -23,18 +23,20 @@
                 </tr>
             </thead>
             <tbody>
+                {% for product in my_prods %}
                 <tr>
-                    <td>1</td>
-                    <td>Biscuits</td>
-                    <td>ksh. 100.00</td>
-                    <td>ksh. 200.00</td>
+                    <td>{{product[0]}}</td>
+                    <td>{{product[1]}}</td>
+                    <td>{{product[2]}}</td>
+                    <td>{{product[3]}}</td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
