--- a/templates/sales.html
+++ b/templates/sales.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>My sales page.</h1>
-    <p>{{sales_1}}</p>
+    <!-- <p>{{sales_1}}</p> -->
     <div>
         <table class="table">
             <thead>
@@ -23,12 +23,14 @@
                 </tr>
             </thead>
             <tbody>
+                {% for sale in sales_1 %}
                 <tr>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>21/10/2025</td>
+                    <td>{{sale[0]}}</td>
+                    <td>{{sale[1]}}</td>
+                    <td>{{sale[2]}}</td>
+                    <td>{{sale[3]}}</td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
 
@@ -36,7 +38,7 @@
 
 
 
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
