adding sales on sales route

--- a/templates/products.html
+++ b/templates/products.html
@@ -59,21 +59,17 @@
                     </div>
                     <div class="modal-body">
                         <form action="/add_products" method="post">
-
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">product name</label>
-                                <input type="text" class="form-control" name="product_name" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                <label class="form-label">product name</label>
+                                <input type="text" class="form-control" name="product_name">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Buying price</label>
-                                <input type="number" class="form-control" name="buying_price"
-                                    id="exampleInputPassword1">
+                                <label class="form-label">Buying price</label>
+                                <input type="number" class="form-control" name="buying_price">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Selling price</label>
-                                <input type="number" class="form-control" name="selling_price"
-                                    id="exampleInputPassword1">
+                                <label class="form-label">Selling price</label>
+                                <input type="number" class="form-control" name="selling_price">
                             </div>
 
                             <button type="submit" class="btn btn-primary">add products</button>
