--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -44,6 +44,16 @@
     <div>
         <h1>Welcome to my Dashboard</h1>
     </div>
+    <div>
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">{{my_total_sales}}</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
 
     <div class="container-fluid">
         <div class="row">
